[gd_scene load_steps=4 format=3 uid="uid://bh6qgdb4804jt"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_fjy7w"]
[ext_resource type="PackedScene" uid="uid://db1oeulwh7nea" path="res://Scenes/Player/PlayerHead.tscn" id="2_ep0gh"]
[ext_resource type="PackedScene" uid="uid://c6hmoqlenfruh" path="res://Scenes/Player/BodyChain.tscn" id="2_ycrcr"]

[node name="Player" type="Node2D"]
script = ExtResource("1_fjy7w")

[node name="BodyChainList" type="Node2D" parent="."]

[node name="BodyChain" parent="BodyChainList" instance=ExtResource("2_ycrcr")]

[node name="PlayerHead" parent="." instance=ExtResource("2_ep0gh")]
z_index = 5

[connection signal="new_body_point" from="PlayerHead" to="." method="_on_player_head_new_body_point"]
